<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/item_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_default_10_dimen"
        >

        <TextView
            android:id="@+id/game_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/defaul_text_size_20_sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_marginTop="@dimen/margin_default_10_dimen"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/purple_200"
                    />

                <TextView
                    android:id="@+id/item_player_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    />

                <TextView
                    android:id="@+id/item_score_player_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                >

                <TextView
                    android:id="@+id/item_winner_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/winner"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />

                <TextView
                    android:id="@+id/item_winner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_2"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    />

                <TextView
                    android:id="@+id/item_player_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    />

                <TextView
                    android:id="@+id/item_score_player_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>