<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AddGameFragment">


    <TextView
        android:id="@+id/add_game_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:text="@string/add_a_game_score"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_1_cv"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/player_1_cv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        android:layout_marginBottom="@dimen/margin_default_10_dimen"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/margin_default_20_dimen"
        app:cardElevation="@dimen/margin_default_5_dimen"
        app:layout_constraintTop_toBottomOf="@id/add_game_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_1_score_cv"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/player_1_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="User nick name"
                    android:background="@color/transparent"
                    android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:hint="@string/player_1"
                    android:inputType="textCapWords"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/player_1_score_cv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/margin_default_20_dimen"
        app:cardElevation="@dimen/margin_default_5_dimen"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        tools:layout_editor_absoluteX="20dp"
        app:layout_constraintTop_toBottomOf="@+id/player_1_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_2_cv"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/player_1_score_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Score 1"
                    android:background="@color/transparent"
                    android:hint="@string/score_p1"
                    android:digits="0123456789"
                    android:maxLength="2"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/player_2_cv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        android:layout_marginBottom="@dimen/margin_default_10_dimen"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/margin_default_20_dimen"
        app:cardElevation="@dimen/margin_default_5_dimen"
        app:layout_constraintTop_toBottomOf="@id/player_1_score_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_2_score_cv"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/player_2_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="User nick name"
                    android:background="@color/transparent"
                    android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:hint="@string/player_2"
                    android:inputType="textCapWords"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/player_2_score_cv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/margin_default_20_dimen"
        app:cardElevation="@dimen/margin_default_5_dimen"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        tools:layout_editor_absoluteX="20dp"
        app:layout_constraintTop_toBottomOf="@+id/player_2_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_game_btn"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/player_2_score_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Score 1"
                    android:background="@color/transparent"
                    android:hint="@string/score_p2"
                    android:digits="0123456789"
                    android:maxLength="2"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/add_game_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:layout_marginBottom="@dimen/margin_default_20_dimen"
        app:cardBackgroundColor="@color/purple_500"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/margin_default_20_dimen"
        app:cardElevation="@dimen/margin_default_5_dimen"
        app:layout_constraintTop_toBottomOf="@id/player_2_score_cv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_txt"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>